--- a/config/database.yml.example
+++ b/config/database.yml.example
@@ -1,6 +1,6 @@
 development:
   adapter: postgresql
-  database: johnsonite_dev
+  database: floor_manager_dev
   pool: 5
   timeout: 5000
 
@@ -9,6 +9,6 @@ development:
 # Do not set this db to the same as development or production.
 test:
   adapter: postgresql
-  database: johnsonite_test
+  database: floor_manager_test
   pool: 5
   timeout: 5000
