--- a/config/deploy.rb.example
+++ b/config/deploy.rb.example
@@ -1,15 +1,15 @@
 require 'bundler/capistrano'
 
-set :application, "johnsonite"
+set :application, "floor_manager"
 
 default_run_options[:pty] = true
 ssh_options[:forward_agent] = true
 
-role :app, "dev.johnsonite.net"
-role :web, "dev.johnsonite.net"
-role :db, "dev.johnsonite.net", :primary => true
+role :app, "server.address.com"
+role :web, "server.address.com"
+role :db, "server.address.com", :primary => true
 
-set :deploy_to, "/home6/boondoc7/rails_apps/johnsonite.net"
+set :deploy_to, "/path/to/folder"
 set :deploy_via, :remote_cache
 set :use_sudo, false
 
@@ -17,15 +17,13 @@ set :scm, :git
 set :repository, "git@git.boondockwalker.com:johnsonite/johnsonite-ruby.git"
 set :branch, "master"
 
-set :user, "boondoc7"
+set :user, "floor_manager"
 
 after "deploy", "deploy:cleanup"
 
 after "deploy:update_code" do  
   run "ln -s #{shared_path}/database.yml #{release_path}/config/database.yml"
   run "ln -s #{shared_path}/secret_token.rb #{release_path}/config/initializers/secret_token.rb"
-  run "rm -rf /home6/boondoc7/public_html/dev-johnsonite"
-  run "ln -s #{release_path}/public /home6/boondoc7/public_html/dev-johnsonite"
   run "cd #{release_path} ; RAILS_ENV=production bundle exec rake assets:precompile --trace"
 end
 
